--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hola Mundo</p>
+    <img class="fondoPrincipal" src="./images/fondo2.jpg">
+    <div class="container">
+        <div class="negro"></div>
+    </div> 
+
 <script src="./javascript/main.js"></script>    
 </body>
 </html>
