--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <title>Document</title>
 </head>
 <body>
-    <img class="fondoPrincipal" src="./images/fondo2.jpg" alt="fondo de pantalla">
+    <div class="flexFondo">
+        <div class="gradiente"></div>
+        <img class="fondoPrincipal" src="./images/fondo2.jpg" alt="fondo de pantalla">
+    </div>
     <div class= "canciones">
         <div class="song1">
             <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
