--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <p class="nombre-canciones">Odio madrugar</p>
         </div>
     </div>
+    <div>
+        <audio src="Bitters.mp3" controls></audio>
+    </div>
     <div class="container">
         <div class="negro"></div>
     </div> 
