--- a/index.html
+++ b/index.html
@@ -8,51 +8,46 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <title>BOh Music</title>
+    <title>Document</title>
 </head>
 <body>
-    <div class="flexFondo">
-        <img class="fondoPrincipal" src="./images/fondo2.jpg" alt="fondo de pantalla">
-    </div>
-    <div class= "canciones">
-        <div class="song1">
-            <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-            <p class="nombre-canciones">Odio madrugar</p>
-        </div>
-        <div class="song2">
-            <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-            <p class="nombre-canciones">Odio madrugar</p>
-        </div>
-        <div class="song3">
-            <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-            <p class="nombre-canciones">Odio madrugar</p>
-        </div>
-        <div class="song4">
-            <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-            <p class="nombre-canciones">Odio madrugar</p>
-        </div>
-        <div class="song5">
-            <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-            <p class="nombre-canciones">Odio madrugar</p>
-        </div>
-        <div class="song6">
-            <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-            <p class="nombre-canciones">Odio madrugar</p>
-        </div>
-        <div class="song7">
-            <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-            <p class="nombre-canciones">Odio madrugar</p>
-        </div>
-    </div>
-    <div>
-        <audio src="Bitters.mp3" controls></audio>
-    </div>
+    <img class="fondoPrincipal" src="./images/fondo2.jpg" alt="fondo de pantalla">
     <div class="container">
-        <div class="negro"></div>
+        <div class= "canciones">
+            <div class="song1">
+                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
+                <p class="nombre-canciones">Odio madrugar</p>
+            </div>
+            <div class="song2">
+                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
+                <p class="nombre-canciones">Odio madrugar</p>
+            </div>
+            <div class="song3">
+                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
+                <p class="nombre-canciones">Odio madrugar</p>
+            </div>
+            <div class="song4">
+                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
+                <p class="nombre-canciones">Odio madrugar</p>
+            </div>
+            <div class="song5">
+                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
+                <p class="nombre-canciones">Odio madrugar</p>
+            </div>
+            <div class="song6">
+                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
+                <p class="nombre-canciones">Odio madrugar</p>
+            </div>
+            <div class="song7">
+                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
+                <p class="nombre-canciones">Odio madrugar</p>
+            </div>
+        </div> 
+        <audio controls></audio>
+        <button class="botonCompartir">
+            <img class="imgCompartir" src="./images/share-bt.png" alt="boton compartir">
+        </button> 
     </div> 
-    <button class="botonCompartir">
-        <img src="./images/share-bt.png" alt="boton compartir">
-    </button>
 <script src="./javascript/main.js"></script>    
 </body>
 </html>
