--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
                 <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
                 <p class="nombre-canciones">Odio madrugar</p>
             </div>
-        </div> 
-        <audio controls></audio>
-        <button class="botonCompartir">
-            <img class="imgCompartir" src="./images/share-bt.png" alt="boton compartir">
-        </button> 
+        </div>
+        <div> 
+            <button class="botonCompartir">
+                <img class="imgCompartir" src="./images/share-bt.png" alt="boton compartir">
+            </button>
+        </div>   
     </div> 
 <script src="./javascript/main.js"></script>    
 </body>
