--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
         </div>   
     </div> 
 <script src="./javascript/main.js"></script>    
+<script src="./javascript/playlist.js"></script>  
 </body>
 </html>
