--- a/index.html
+++ b/index.html
@@ -13,36 +13,8 @@
 <body>
     <img class="fondoPrincipal" src="./images/fondo2.jpg" alt="fondo de pantalla">
     <div class="container">
-        <div class= "canciones">
-            <div class="song1">
-                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-                <p class="nombre-canciones">Odio madrugar</p>
-            </div>
-            <div class="song2">
-                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-                <p class="nombre-canciones">Odio madrugar</p>
-            </div>
-            <div class="song3">
-                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-                <p class="nombre-canciones">Odio madrugar</p>
-            </div>
-            <div class="song4">
-                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-                <p class="nombre-canciones">Odio madrugar</p>
-            </div>
-            <div class="song5">
-                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-                <p class="nombre-canciones">Odio madrugar</p>
-            </div>
-            <div class="song6">
-                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-                <p class="nombre-canciones">Odio madrugar</p>
-            </div>
-            <div class="song7">
-                <img class="img-canciones" src="./images/songs.png" alt="imagen cancion">
-                <p class="nombre-canciones">Odio madrugar</p>
-            </div>
-        </div>
+        <div class= "canciones"></div>
+
         <div> 
             <button class="botonCompartir">
                 <img class="imgCompartir" src="./images/share-bt.png" alt="boton compartir">
