--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <title>Document</title>
 </head>
 <body>
-    <img class="fondoPrincipal" src="./images/fondo2.jpg" alt="fondo de pantalla">
+    <div class="flexFondo">
+        <img class="fondoPrincipal" src="./images/fondo2.jpg" alt="fondo de pantalla">
+    </div>
     <div class="container">
         <div class= "canciones"></div>
 
